_sass/buttons.scss
/*
 * Copyright (c) 2017-2019, FusionAuth, All Rights Reserved
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 * either express or implied. See the License for the specific
 * language governing permissions and limitations under the License.
 */

@import 'variables-functions-mixins';

/* Buttons
–––––––––––––––––––––––––––––––––––––––––––––––––– */

@mixin button-colors($background-color, $color, $border-color) {
  background: $background-color !important;
  @if $border-color != none {
    border: 1px solid $border-color;
  } @else if $border-color == none {
    border: none;
  }
  color: $color !important;
}

.action-button {
  display: inline-flex;
  position: relative;

  a.square.button {
    padding: 8px 7px;
  }
}

.button {
  border-radius: 3px;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-size: 12px !important;
  font-weight: $button-font-weight !important;
  letter-spacing: .05rem !important;
  line-height: 12px !important;
  padding: $button-padding !important;
  position: relative;
  text-align: center !important;
  text-decoration: none !important;
  text-transform: none !important;
  transition: background 0.2s ease-in-out;
  white-space: nowrap;

  &.account {
    color: $body-font-color;
    font-size: 14px !important;
    font-weight: 600 !important;
    padding: 0 !important;
    text-transform: uppercase;

    i {
      font-size: 20px;
      margin-right: 5px;
      vertical-align: middle;
    }
  }

  &.brochure {
    border-radius: 22px;
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
    font-weight: 700 !important;
    padding: 16px 30px !important;

    i {
      margin-right: 2px;
    }

    &.wide {
      padding: 16px 60px !important;
    }
  }

  &.circle {
    border-radius: 50%;
  }

  &.disabled, &:disabled {
    opacity: 0.4;
    pointer-events: none;
  }

  &.full {
    width: 100%;
  }

  &.square {
    padding: 12px !important;
  }

  &.small-square {
    padding: 7px !important;
  }

  &:hover {
    outline: 0;
  }

  &.shadow {
    box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.35);

    &:hover, &:focus {
      box-shadow: 2px 2px 7px 0 rgba(0, 0, 0, 0.35);
    }
  }

  &.stack {
    margin-bottom: 10px;
  }

  &.blue {
    @include button-colors($blue-button-background-color, $blue-button-color, none);

    &:hover, &:focus {
      @include button-colors($blue-button-hover-background-color, $blue-button-color, none);
    }
  }

  &.gray {
    @include button-colors($gray-button-background-color, $gray-button-color, $gray-button-border-color);
    padding: 7px 12px !important;

    &.square {
      padding: 11px !important;
    }

    &.small-square {
      padding: 6px !important;
    }

    &:hover, &:focus {
      @include button-colors($gray-button-hover-background-color, $gray-button-color, $gray-button-border-color);
    }
  }

  &.green {
    @include button-colors($green-button-background-color, $green-button-color, none);

    &:hover, &:focus {
      @include button-colors($green-button-hover-background-color, $green-button-color, none);
    }
  }

  &.orange {
    @include button-colors($orange-button-background-color, $orange-button-color, none);

    &:hover, &:focus {
      @include button-colors($orange-button-hover-background-color, $orange-button-color, none);
    }
  }

  &.purple {
    @include button-colors($purple-button-background-color, $purple-button-color, none);

    &:hover, &:focus {
      @include button-colors($purple-button-hover-background-color, $purple-button-color, none);
    }
  }

  &.red {
    @include button-colors($red-button-background-color, $red-button-color, none);

    &:hover, &:focus {
      @include button-colors($red-button-hover-background-color, $red-button-color, none);
    }
  }

  &.yellow {
    @include button-colors($yellow-button-background-color, $yellow-button-color, none);

    &:hover, &:focus {
      @include button-colors($yellow-button-hover-background-color, $yellow-button-color, none);
    }
  }

  &.white {
    @include button-colors($white-button-background-color, $white-button-color, $white-button-border-color);

    &:hover, &:focus {
      @include button-colors($white-button-hover-background-color, $white-button-hover-color, $white-button-hover-border-color);
    }
  }
}

.split-button {
  display: inline-flex;
  position: relative;

  > a {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    flex: 0 1 auto;
    margin-right: -1px;
  }

  a {
    align-items: center;
    display: flex;
  }

  button {
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    flex: 0 1 auto;

    &:before {
      content: "\f107";
      display: inline-block;
      font-family: FontAwesome;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }

    &:focus {
      box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
    }
  }

  .item {
    i {
      margin-right: 7px;
    }

    /* Generally speaking this will either by a FontAwesome, or an SVG. Accounting for the SVG in img tag here */
    img {
      height: 20px;
      margin-right: 7px;
      width: 20px;
    }
  }
}

.action-button, .split-button {
  .menu {
    background: white;
    border: 1px solid $gray-button-border-color;
    border-radius: 3px;
    display: none;
    min-width: 200px;
    position: absolute;
    right: 0;
    text-align: left;
    top: 38px;
    z-index: $layer-3;

    .item {
      color: $gray-button-color;
      display: flex;
      padding: 10px 12px;
      transition: background 0.2s ease-in-out;

      &:visited, &:hover {
        color: $gray-button-color;
      }

      &:hover {
        background: $gray-button-hover-background-color;
      }

      i {
        margin-right: 8px;
      }
    }

    .divider {
      border-top: 1px solid lighten($gray-button-border-color, 20%);
    }
  }
}

.inline-buttons {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  
  @include media(md) {
    flex-direction: row;
  }

  a {
    margin: 0 5px 10px;
  }
}

